--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Quesadillas, fruta de temporada 🫔🍎</p>
+            <p>Chilaquiles con frijoles crema y queso 🍅🧀</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Chuleta con puré de papa 🥩🥔</p>
+            <p>Sopa de fideo con pollo y verdura 🍜🍗🥕</p>
           </div>
         </div>
       </div>
@@ -210,11 +210,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo en salsa de jitomate, fruta de temporada 🍅🍳</p>
+            <p>Yogurt con fruta y galletas 🍶🍓🍪</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Tiritas de pescado con verdura 🐟🥦</p>
+            <p>Frijoles con arrechera 🫘🥩</p>
           </div>
         </div>
       </div>
@@ -224,11 +224,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Sandwich de jamón, fruta de temporada 🥪🍌</p>
+            <p>Enfrijoladas con queso 🫓🧀</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Crema de brócoli con picadillo 🥦🍲</p>
+            <p>Pollo empanizado con arroz 🍗🍚</p>
           </div>
         </div>
       </div>
@@ -238,11 +238,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Avena con manzana o plátano, galletas 🍎🍌🍪</p>
+            <p>Taquitos de papa con salsa de jitomate, manzana 🌮🍎</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Ensalada de pollo 🥗🍗</p>
+            <p>Lentejas con arroz y verdura 🫘🍚🥦</p>
           </div>
         </div>
       </div>
@@ -252,11 +252,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Hot cakes con fruta y miel 🥞🍓🍯</p>
+            <p>Huevo con salchicha 🍳🌭</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Arroz con pollo y verdura 🍚🍗🥕</p>
+            <p>Espagueti con carne molida 🍝🥩</p>
           </div>
         </div>
       </div>
