--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Yogurt con fruta y galletas 🍶🍓🍪</p>
+            <p>Quesadillas con sandía 🌮🍉</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Frijoles con arrechera 🫘🥩</p>
+            <p>Espagueti con carne molida 🍝🥩</p>
           </div>
         </div>
       </div>
@@ -224,11 +224,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Enfrijoladas con queso 🫓🧀</p>
+            <p>Avena con manzana y galletas marías 🥣🍎🍪</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Pollo empanizado con arroz 🍗🍚</p>
+            <p>Chayotes con crema y sopa de arroz 🥒🍚</p>
           </div>
         </div>
       </div>
@@ -238,11 +238,14 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Taquitos de papa con salsa de jitomate, manzana 🌮🍎</p>
+            <p>Huevo con jamón 🍳🍖</p>
+            <p>Una o dos tortillas 🫓</p>
+            <p>Pepino 🥒</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Lentejas con arroz y verdura 🫘🍚🥦</p>
+            <p>Chorizo con papas 🌭🥔</p>
+            <p>Jícama picada 🍐</p>
           </div>
         </div>
       </div>
@@ -252,11 +255,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con salchicha 🍳🌭</p>
+            <p>Enfrijoladas con queso 🫓🧀</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Espagueti con carne molida 🍝🥩</p>
+            <p>Filete de pollo con sopa de fideo y verduras 🍗🍜🥦</p>
           </div>
         </div>
       </div>
