--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Colegio Tlahtoani – Menú Escolar</title>
+  <title>Colegio Tlahtoani – Menú Escolar Preescolar</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -189,18 +189,34 @@
       <img src="imagenmenu.png" alt="Menú Escolar Portada">
     </section>
 
-    <!-- Cards de menú actualizado -->
+    <!-- Cards de menú actualizado para Preescolar -->
     <div class="menu-grid">
+      <div class="dia-card">
+        <div class="dia-header">Lunes</div>
+        <div class="comidas">
+          <div class="comida">
+            <h4>Desayuno</h4>
+            <p>Huevo con jamón y manzana 🍳🍖🍎</p>
+          </div>
+          <div class="comida">
+            <h4>Comida</h4>
+            <p>Caldo de albóndigas con verdura 🍲🥦</p>
+            <p>Una o dos tortillas 🫓</p>
+          </div>
+        </div>
+      </div>
+
       <div class="dia-card">
         <div class="dia-header">Martes</div>
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Quesadillas con sandía 🌮🍉</p>
+            <p>Quesadillas con pepino 🌮🥒</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Espagueti con carne molida 🍝🥩</p>
+            <p>Taquitos dorados de papa y frijol 🌮🥔🫘</p>
+            <p>Salsa de jitomate y lechuga 🍅🥬</p>
           </div>
         </div>
       </div>
@@ -210,11 +226,12 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Avena con manzana y galletas marías 🥣🍎🍪</p>
+            <p>Huevo con tortilla 🍳🫓</p>
+            <p>Manzana 🍎</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Chayotes con crema y sopa de arroz 🥒🍚</p>
+            <p>Ensalada de atún con códigos y galletas saladas 🥗🐟🍪</p>
           </div>
         </div>
       </div>
@@ -224,28 +241,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con jamón 🍳🍖</p>
-            <p>Una o dos tortillas 🫓</p>
-            <p>Pepino 🥒</p>
+            <p>Enfrijoladas con crema y queso 🫓🧀</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Chorizo con papas 🌭🥔</p>
-            <p>Jícama picada 🍐</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="dia-card">
-        <div class="dia-header">Viernes</div>
-        <div class="comidas">
-          <div class="comida">
-            <h4>Desayuno</h4>
-            <p>Enfrijoladas con queso 🫓🧀</p>
-          </div>
-          <div class="comida">
-            <h4>Comida</h4>
-            <p>Filete de pollo con sopa de fideo y verduras 🍗🍜🥦</p>
+            <p>Fideos con pollo y verdura 🍜🍗🥦</p>
           </div>
         </div>
       </div>
