--- a/index.html
+++ b/index.html
@@ -196,12 +196,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con jamón y manzana 🍳🍖🍎</p>
+            <p>Huevo con tortilla, manzana 🍳🫓🍎</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Caldo de albóndigas con verdura 🍲🥦</p>
-            <p>Una o dos tortillas 🫓</p>
+            <p>Taquitos de carne adobada 🌮🥩</p>
           </div>
         </div>
       </div>
@@ -211,12 +210,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Quesadillas con pepino 🌮🥒</p>
+            <p>Hot cakes con miel y fruta 🥞🍯🍓</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Taquitos dorados de papa y frijol 🌮🥔🫘</p>
-            <p>Salsa de jitomate y lechuga 🍅🥬</p>
+            <p>Nuget de pollo con sopa de arroz 🍗🍚</p>
           </div>
         </div>
       </div>
@@ -226,12 +224,14 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con tortilla 🍳🫓</p>
-            <p>Manzana 🍎</p>
+            <p>Huevo en salsa de jitomate 🍳🍅</p>
+            <p>Una o dos tortillas 🫓</p>
+            <p>Jícama 🥬</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Ensalada de atún con códigos y galletas saladas 🥗🐟🍪</p>
+            <p>Tiras de pollo con sopa de códitos 🍗🍜</p>
+            <p>Verdura zanahoria 🥕</p>
           </div>
         </div>
       </div>
@@ -241,11 +241,25 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Enfrijoladas con crema y queso 🫓🧀</p>
+            <p>Quesadillas, sandía 🫓🧀🍉</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Fideos con pollo y verdura 🍜🍗🥦</p>
+            <p>Picadillo con sopa de arroz 🥩🍚</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="dia-card">
+        <div class="dia-header">Viernes</div>
+        <div class="comidas">
+          <div class="comida">
+            <h4>Desayuno</h4>
+            <p>Lentejas con jitomate y arroz 🍲🍅🍚</p>
+          </div>
+          <div class="comida">
+            <h4>Comida</h4>
+            <p>Carne con papas y salsa de jitomate 🥩🥔🍅</p>
           </div>
         </div>
       </div>
