--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Hot cakes con miel y fruta 🥞🍯🍓</p>
+            <p>Huevo con salchicha 🍳🌭</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Nuget de pollo con sopa de arroz 🍗🍚</p>
+            <p>Fideos con pollo y verdura 🍜🍗🥦</p>
           </div>
         </div>
       </div>
@@ -224,14 +224,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo en salsa de jitomate 🍳🍅</p>
-            <p>Una o dos tortillas 🫓</p>
-            <p>Jícama 🥬</p>
+            <p>Hot cakes con miel y manzana 🥞🍯🍎</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Tiras de pollo con sopa de códitos 🍗🍜</p>
-            <p>Verdura zanahoria 🥕</p>
+            <p>Sopa de lentejas y arroz 🍲🍚</p>
           </div>
         </div>
       </div>
@@ -241,11 +238,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Quesadillas, sandía 🫓🧀🍉</p>
+            <p>Huevo en salsa roja 🍳🍅</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Picadillo con sopa de arroz 🥩🍚</p>
+            <p>Picadillo con espagueti 🥩🍝</p>
           </div>
         </div>
       </div>
@@ -255,11 +252,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Lentejas con jitomate y arroz 🍲🍅🍚</p>
+            <p>Enfrijoladas con queso 🫓🧀</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Carne con papas y salsa de jitomate 🥩🥔🍅</p>
+            <p>Ceviche de soya 🥗</p>
           </div>
         </div>
       </div>
