--- a/index.html
+++ b/index.html
@@ -196,11 +196,13 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con tortilla, manzana 🍳🫓🍎</p>
+            <p>Huevo con jamón 🍳🥓</p>
+            <p>Sandía 🍉</p>
           </div>
           <div class="comida">
-            <h4>Comida</h4>
-            <p>Taquitos de carne adobada 🌮🥩</p>
+            <h4>Comida Primaria</h4>
+            <p>Caldo de pollo con verdura y arroz 🍲🍗🥕🍚</p>
+            <p>Una o dos tortillas 🫓</p>
           </div>
         </div>
       </div>
@@ -210,11 +212,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con salchicha 🍳🌭</p>
+            <p>Wafles con plátano y miel 🧇🍌🍯</p>
           </div>
           <div class="comida">
-            <h4>Comida</h4>
-            <p>Fideos con pollo y verdura 🍜🍗🥦</p>
+            <h4>Comida Primaria</h4>
+            <p>Espagueti a la boloñesa 🍝🍅🥩</p>
           </div>
         </div>
       </div>
@@ -224,11 +226,12 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Hot cakes con miel y manzana 🥞🍯🍎</p>
+            <p>Enfrijoladas con queso 🫓🧀</p>
           </div>
           <div class="comida">
-            <h4>Comida</h4>
-            <p>Sopa de lentejas y arroz 🍲🍚</p>
+            <h4>Comida Primaria</h4>
+            <p>Fideos con verdura y pollo 🍜🥦🍗</p>
+            <p>Una o dos tortillas 🫓</p>
           </div>
         </div>
       </div>
@@ -238,11 +241,13 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo en salsa roja 🍳🍅</p>
+            <p>Taquitos de papa 🌮🥔</p>
+            <p>Jícama con sal y limón 🥒🧂🍋</p>
           </div>
           <div class="comida">
-            <h4>Comida</h4>
-            <p>Picadillo con espagueti 🥩🍝</p>
+            <h4>Comida Primaria</h4>
+            <p>Lentejas guisadas con jitomate y cebolla 🍲🧅🍅</p>
+            <p>Sopa de arroz 🍚</p>
           </div>
         </div>
       </div>
@@ -252,11 +257,13 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Enfrijoladas con queso 🫓🧀</p>
+            <p>Huevo con tortilla 🍳🫓</p>
+            <p>Sandía 🍉</p>
           </div>
           <div class="comida">
-            <h4>Comida</h4>
-            <p>Ceviche de soya 🥗</p>
+            <h4>Comida Primaria</h4>
+            <p>Tacos dorados de papa y frijol 🌮🥔🫘</p>
+            <p>Con salsa de jitomate y lechuga 🍅🥬</p>
           </div>
         </div>
       </div>
