--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
           <div class="comida">
             <h4>Desayuno</h4>
             <p>Huevo con jamón 🍳🥓</p>
-            <p>Sandía 🍉</p>
+            <p>Una o dos tortillas 🫓</p>
           </div>
           <div class="comida">
-            <h4>Comida Primaria</h4>
-            <p>Caldo de pollo con verdura y arroz 🍲🍗🥕🍚</p>
-            <p>Una o dos tortillas 🫓</p>
+            <h4>Comida</h4>
+            <p>Tortitas de papa en salsa de jitomate 🥔🍅</p>
+            <p>Sopa de arroz con zanahoria 🍚🥕</p>
           </div>
         </div>
       </div>
@@ -212,11 +212,13 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Wafles con plátano y miel 🧇🍌🍯</p>
+            <p>Sandwich de jamón 🥪🥓</p>
+            <p>Pepino 🥒</p>
           </div>
           <div class="comida">
-            <h4>Comida Primaria</h4>
-            <p>Espagueti a la boloñesa 🍝🍅🥩</p>
+            <h4>Comida</h4>
+            <p>Albóndigas en caldo con verduras 🍲🥩🥕</p>
+            <p>Arroz 🍚</p>
           </div>
         </div>
       </div>
@@ -226,12 +228,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Enfrijoladas con queso 🫓🧀</p>
+            <p>Chilaquiles con frijoles y queso 🌶️🫘🧀</p>
           </div>
           <div class="comida">
-            <h4>Comida Primaria</h4>
-            <p>Fideos con verdura y pollo 🍜🥦🍗</p>
-            <p>Una o dos tortillas 🫓</p>
+            <h4>Comida</h4>
+            <p>Taquitos de adobada 🌮🥩</p>
           </div>
         </div>
       </div>
@@ -241,13 +242,12 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Taquitos de papa 🌮🥔</p>
-            <p>Jícama con sal y limón 🥒🧂🍋</p>
+            <p>Enfrijoladas con queso 🫓🧀</p>
+            <p>Manzana 🍎</p>
           </div>
           <div class="comida">
-            <h4>Comida Primaria</h4>
-            <p>Lentejas guisadas con jitomate y cebolla 🍲🧅🍅</p>
-            <p>Sopa de arroz 🍚</p>
+            <h4>Comida</h4>
+            <p>Caldo de pollo con verduras 🍲🍗🥕</p>
           </div>
         </div>
       </div>
@@ -257,13 +257,14 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con tortilla 🍳🫓</p>
-            <p>Sandía 🍉</p>
+            <p>Huevo en salsa de jitomate 🍳🍅</p>
+            <p>Jícama 🥒</p>
           </div>
           <div class="comida">
-            <h4>Comida Primaria</h4>
-            <p>Tacos dorados de papa y frijol 🌮🥔🫘</p>
-            <p>Con salsa de jitomate y lechuga 🍅🥬</p>
+            <h4>Comida</h4>
+            <p>Sopa de lentejas con jitomate y cebolla 🍲🧅🍅</p>
+            <p>Arroz rojo 🍚</p>
+            <p>Una o dos tortillas 🫓</p>
           </div>
         </div>
       </div>
