--- a/index.html
+++ b/index.html
@@ -196,13 +196,12 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo con jamón 🍳🥓</p>
-            <p>Una o dos tortillas 🫓</p>
+            <p>Wafles con manzana y miel 🧇🍎🍯</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Tortitas de papa en salsa de jitomate 🥔🍅</p>
-            <p>Sopa de arroz con zanahoria 🍚🥕</p>
+            <p>Ensalada de atún con códito y verdura 🥗🐟</p>
+            <p>Crema y galletas saldas 🥣🍪</p>
           </div>
         </div>
       </div>
@@ -217,8 +216,7 @@
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Albóndigas en caldo con verduras 🍲🥩🥕</p>
-            <p>Arroz 🍚</p>
+            <p>Caldo de pollo con verdura y arroz 🍲🍗🥕🍚</p>
           </div>
         </div>
       </div>
@@ -228,11 +226,14 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Chilaquiles con frijoles y queso 🌶️🫘🧀</p>
+            <p>Quesadillas 🫓🧀</p>
+            <p>Jícama 🥒</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Taquitos de adobada 🌮🥩</p>
+            <p>Nuget de pescado 🐟</p>
+            <p>Espagueti 🍝</p>
+            <p>Zanahoria rallada con sal y limón 🥕🧂🍋</p>
           </div>
         </div>
       </div>
@@ -242,12 +243,12 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Enfrijoladas con queso 🫓🧀</p>
-            <p>Manzana 🍎</p>
+            <p>Huevo con jamón 🍳🥓</p>
+            <p>Jícama 🥒</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Caldo de pollo con verduras 🍲🍗🥕</p>
+            <p>Sopa de fideo con verduras 🍜🥕</p>
           </div>
         </div>
       </div>
@@ -257,14 +258,11 @@
         <div class="comidas">
           <div class="comida">
             <h4>Desayuno</h4>
-            <p>Huevo en salsa de jitomate 🍳🍅</p>
-            <p>Jícama 🥒</p>
+            <p>Chilaquiles con frijoles y queso 🌶️🫘🧀</p>
           </div>
           <div class="comida">
             <h4>Comida</h4>
-            <p>Sopa de lentejas con jitomate y cebolla 🍲🧅🍅</p>
-            <p>Arroz rojo 🍚</p>
-            <p>Una o dos tortillas 🫓</p>
+            <p>Taquitos de adobada 🌮🥩</p>
           </div>
         </div>
       </div>
